Generate certificate + add IP address + Modify readme

--- a/config/conf.d/bitwarden.conf
+++ b/config/conf.d/bitwarden.conf
@@ -1,19 +1,19 @@
 server {
 	listen	80;
-	server_name	bitwarden.mydevops.com;
+	server_name	bitwarden.mydevops.intra;
 
 	return 301 https://$server_name$request_uri;
 
 	location / {
-		proxy_pass http://IP:8010;
+		proxy_pass http://192.168.10.3:8010;
 	}
 }
 
 server {
 	listen	443 ssl;
-	server_name	bitwarden.mydevops.com;
+	server_name	bitwarden.mydevops.intra;
 
 	location / {
-		proxy_pass http://IP:8010;
+		proxy_pass http://192.168.10.3:8010;
 	}
 }
