--- a/config/conf.d/zabbix.conf
+++ b/config/conf.d/zabbix.conf
@@ -1,19 +1,19 @@
 server {
 	listen	80;
-	server_name	zabbix.mydevops.com;
+	server_name	zabbix.mydevops.intra;
 
 	return 301 https://$server_name$request_uri;
 
 	location / {
-		proxy_pass http://IP;
+		proxy_pass http://192.168.10.4;
 	}
 }
 
 server {
 	listen	443 ssl;
-	server_name	zabbix.mydevops.com;
+	server_name	zabbix.mydevops.intra;
 
 	location / {
-		proxy_pass http://IP;
+		proxy_pass http://192.168.10.4;
 	}
 }
